@@ -32,24 +32,24 @@ a { color: inherit; }
 .sender[type=normal] { color: #9abfe4; }
 .sender[type=myself] { color: #3175b9; }
 
-.line[type=system] { color: #808080; }
-.line[type=error] { color: #e75858; font-weight: bold; }
-.line[type=reply] { color: #808080; }
-.line[type=error_reply] { color: #e75858; }
-.line[type=dcc_send_send] { color: #3175b9; }
-.line[type=dcc_send_receive] { color: #3175b9; }
-.line[type=privmsg] {}
-.line[type=notice] { color: #808080; }
-.line[type=action] { color: #d4d4d4; font-style: italic; }
-.line[type=join] { color: #bcbced; }
-.line[type=part] { color: #cd87aa; }
-.line[type=kick] { color: #c16895; }
-.line[type=quit] { color: #c16895; }
-.line[type=kill] { color: #c16895; }
-.line[type=nick] { color: #95bfda; }
-.line[type=mode] { color: #7878dc; }
-.line[type=topic] { color: #d5d5ff; }
-.line[type=invite] { color: #9abfe4; font-style: italic; }
-.line[type=wallops] { color: #808080; }
-.line[type=debug_send] { color: #808080; }
-.line[type=debug_receive] { color: #808080; }
+.message[type=system] { color: #808080; }
+.message[type=error] { color: #e75858; font-weight: bold; }
+.message[type=reply] { color: #808080; }
+.message[type=error_reply] { color: #e75858; }
+.message[type=dcc_send_send] { color: #3175b9; }
+.message[type=dcc_send_receive] { color: #3175b9; }
+.message[type=privmsg] {}
+.message[type=notice] { color: #808080; }
+.message[type=action] { color: #d4d4d4; font-style: italic; }
+.message[type=join] { color: #bcbced; }
+.message[type=part] { color: #cd87aa; }
+.message[type=kick] { color: #c16895; }
+.message[type=quit] { color: #c16895; }
+.message[type=kill] { color: #c16895; }
+.message[type=nick] { color: #95bfda; }
+.message[type=mode] { color: #7878dc; }
+.message[type=topic] { color: #d5d5ff; }
+.message[type=invite] { color: #9abfe4; font-style: italic; }
+.message[type=wallops] { color: #808080; }
+.message[type=debug_send] { color: #808080; }
+.message[type=debug_receive] { color: #808080; }
