@@ -1,10 +1,16 @@
 2008-02-26  Satoshi Nakagawa <artension@gmail.com>
 
+	New style action messages.
+	Fixed wrong css selectors in all themes.
+	Changed the default nick format to '%n: '.
+
+2008-02-26  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed to remember the current text if modified when pushed up key.
 
 2008-02-26  Satoshi Nakagawa <artension@gmail.com>
 
-	Updated the bundled themes to conforms the new css style.
+	Updated the bundled themes to conform to the new css style.
 	Added all attributes in <body> to <html>.
 
 2008-02-26  Satoshi Nakagawa <artension@gmail.com>
